--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
 <head>
   <title>Brandon's Meeting Minutes</title>
   <meta charset="UTF-8">
-  <link rel="icon" type="image/icon" href="images/favicon.ico">
+  <link rel="stylesheet" href="style.css">
 </head>
   
-<body>
-  <header>
-    <div class="Heading">
-    <h1>Brandon's Meeting Minutes</h1>
-    </div>
-    <hr>
-    <nav>
+<header>
+  <nav class="navbar">
       <ul>
         <li><a href="#hour1">Hour 1 Notes</a></li>
         <li><a href="#hour2">Hour 2 Notes</a></li>
         <li><a href="#hour3">Hour 3 Notes</a></li>
         <li><a href="#complaint">Complaint Form</a></li>
       </ul>
-    </nav>
-  </header>
+  </nav>
+</header>
+  
+<div class="banner">
+  <div class="banner-text">
+    <h1 style="font-size:50px">Brandon's Notes</h1>
+    <p>And I'm a Photographer</p>
+  </div>
+</div>
+  
+<body>
   <main>
     <section id="hour1">
       <hr>
