--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Brandon's Meeting Minutes</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/icon" href="images/favicon.ico">
 </head>
   
 <header>
