--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
   
 <header>
+
   <nav class="navbar">
       <ul>
         <li><a href="#hour1">Hour 1 Notes</a></li>
@@ -17,19 +18,19 @@
         <li><a href="#complaint">Complaint Form</a></li>
       </ul>
   </nav>
+  <div class="banner">
+    <div class="banner-text">
+      <h1>Brandon's Notes</h1>
+      <p>/* For CSE 110 Lab 3 */</p>
+    </div>
+  </div>
 </header>
   
-<div class="banner">
-  <div class="banner-text">
-    <h1 style="font-size:50px">Brandon's Notes</h1>
-    <p>And I'm a Photographer</p>
-  </div>
-</div>
+
   
 <body>
   <main>
     <section id="hour1">
-      <hr>
       <h2>Hour 1 Notes</h2>
       <p>Brainstorming an idea with <b> extreme potential </b>for a startup:</p>
       <ul>
