Fixed many issues

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
   
 <header>
-
   <nav class="navbar">
       <ul>
         <li><a href="#hour1">Hour 1 Notes</a></li>
@@ -18,17 +17,22 @@
         <li><a href="#complaint">Complaint Form</a></li>
       </ul>
   </nav>
+
   <div class="banner">
+    <img class="banner-image" src="images/ventura.png">
     <div class="banner-text">
       <h1>Brandon's Notes</h1>
-      <p>/* For CSE 110 Lab 3 */</p>
+      <p class="banner-subtitle">/* For CSE 110 Lab 3 */</p>
     </div>
   </div>
+
 </header>
   
-
-  
 <body>
+  <div class="obscene">
+      Obscene message
+  </div>
+
   <main>
     <section id="hour1">
       <h2>Hour 1 Notes</h2>
@@ -42,7 +46,7 @@
       </ul>
 
         <br>
-      <img src="images/carsock.jpg" alt="An example image" width="320">
+      <img src="images/catalina.jpg" alt="An example image" width="320">
     </section>
     <section id="hour2">
       <hr>
