--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
       </ul>
 
         <br>
-      <img src="images/catalina.jpg" alt="An example image" width="320">
+
+    <div class="flex-container">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div> 
+    </div>
+
     </section>
     <section id="hour2">
       <hr>
@@ -127,6 +133,41 @@
       </form>
     </section>
   </main>
+      <div class="grid-layout">
+        <div class="grid-item span-4 grid-item-1"></div>
+        <div class="grid-item span-6 grid-item-2"></div>
+        <div class="grid-item span-5 grid-item-3"></div>
+        <div class="grid-item span-3 grid-item-4"></div>
+        <div class="grid-item span-2 grid-item-5"></div>
+        <div class="grid-item span-5 grid-item-6"></div>
+        <div class="grid-item span-3 grid-item-7"></div>
+        <div class="grid-item span-6 grid-item-8"></div>
+        <div class="grid-item span-4 grid-item-9"></div>
+        <div class="grid-item span-2 grid-item-10"></div>
+        <div class="grid-item span-3 grid-item-11"></div>
+        <div class="grid-item span-5 grid-item-12"></div>
+        <div class="grid-item span-6 grid-item-13"></div>
+        <div class="grid-item span-3 grid-item-14"></div>
+        <div class="grid-item span-3 grid-item-15"></div>
+        <div class="grid-item span-5 grid-item-16"></div>
+        <div class="grid-item span-3 grid-item-17"></div>
+        <div class="grid-item span-4 grid-item-18"></div>
+        <div class="grid-item span-3 grid-item-19"></div>
+        <div class="grid-item span-6 grid-item-20"></div>
+        <div class="grid-item span-2 grid-item-21"></div>
+        <div class="grid-item span-4 grid-item-22"></div>
+        <div class="grid-item span-5 grid-item-23"></div>
+        <div class="grid-item span-6 grid-item-24"></div>
+        <div class="grid-item span-4 grid-item-25"></div>
+        <div class="grid-item span-2 grid-item-26"></div>
+        <div class="grid-item span-4 grid-item-27"></div>
+        <div class="grid-item span-6 grid-item-28"></div>
+        <div class="grid-item span-3 grid-item-29"></div>
+        <div class="grid-item span-4 grid-item-30"></div>
+        <div class="grid-item span-2 grid-item-31"></div>
+        <div class="grid-item span-5 grid-item-32"></div>
+        <div class="grid-item span-3 grid-item-33"></div>
+    </div>
   
   <footer>
     <p>&copy; 2023 Brandon's HTML Meeting Minutes. All rights reserved.</p>
