--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img class="banner-image" src="images/ventura.png">
     <div class="banner-text">
       <h1>Brandon's Notes</h1>
-      <p class="banner-subtitle">/* For CSE 110 Lab 3 */</p>
+      <p id="banner-subtitle">/* For CSE 110 Lab 3 */</p>
     </div>
   </div>
 
@@ -92,7 +92,7 @@
           <label for="ssn">Social Security Number:</label>
         	<input type="text" id="ssn" name="ssn" required>
           <br>
-          <label for="cc">Credit Card Number:</label>
+          <label class="cc" for="cc">Credit Card Number:</label>
         	<input type="text" id="cc" name="cc" required>
           <br>
           <label for="cvv">CVV:</label>
